--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,24 @@
 spring:
 #  init:
 #    mode: always
-  h2:
-    console:
-      enabled: true
+#  h2:
+#    console:
+#      enabled: true
+#
+#  datasource:
+#    url: jdbc:mariadb://database-1.c62snh2lrenz.ap-northeast-2.rds.amazonaws.com:3306/studyshare
+#    username: admin
+#    password: tkdrud11
+#    driver-class-name: org.mariadb.jdbc.Driver
 
   datasource:
-    url: jdbc:mariadb://database-1.c62snh2lrenz.ap-northeast-2.rds.amazonaws.com:3306/studyshare
-    username: admin
-    password: tkdrud11
-    driver-class-name: org.mariadb.jdbc.Driver
-
-#  datasource:
-#    url: jdbc:h2:mem:testdb
-#    driver-class-name: org.h2.Driver
-#    username: sa
-#    password:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
 
   jpa:
-#    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.H2Dialect
     generate-ddl: true
     hibernate:
       ddl-auto: create
